[gd_scene load_steps=6 format=3 uid="uid://lvtlvakokdx1"]

[ext_resource type="Script" uid="uid://c73wmv3b4e6e7" path="res://scripts/configuracao.gd" id="1_dbr2k"]
[ext_resource type="Texture2D" uid="uid://ct3er3mtxvrrl" path="res://assets/logos/bg.jpg" id="1_mwd8r"]
[ext_resource type="FontFile" uid="uid://cccx1nnbw8b8g" path="res://assets/fontes/Chewy Bubble.otf" id="2_dbr2k"]
[ext_resource type="AudioStream" uid="uid://b5sgcdk4vebv4" path="res://assets/sons/musicas/darkinicial.wav" id="4_7ofij"]
[ext_resource type="AudioStream" uid="uid://c5krmbcytnifa" path="res://assets/sons/efeitosSonoros/shopsound.wav" id="5_aknb3"]

[node name="configuracao" type="Node2D"]
script = ExtResource("1_dbr2k")

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(510, 165)
texture = ExtResource("1_mwd8r")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 195.0
offset_top = 58.0
offset_right = 945.0
offset_bottom = 555.0
color = Color(0.356863, 0.188235, 0.184314, 1)

[node name="configuracao" type="Label" parent="."]
offset_left = 420.0
offset_top = 72.0
offset_right = 709.0
offset_bottom = 127.0
theme_override_fonts/font = ExtResource("2_dbr2k")
theme_override_font_sizes/font_size = 40
text = "Configuracao"

[node name="voltar" type="Button" parent="."]
offset_left = 209.0
offset_top = 484.0
offset_right = 354.0
offset_bottom = 547.0
theme_override_colors/font_hover_color = Color(0.121569, 0.0431373, 0.0470588, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dbr2k")
theme_override_font_sizes/font_size = 40
text = "Voltar"
flat = true

[node name="volumeMusica" type="Label" parent="."]
offset_left = 296.0
offset_top = 150.0
offset_right = 481.0
offset_bottom = 178.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dbr2k")
theme_override_font_sizes/font_size = 20
text = "Volume da Musica"

[node name="volumeEfeito" type="Label" parent="."]
offset_left = 221.0
offset_top = 189.0
offset_right = 481.0
offset_bottom = 217.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dbr2k")
theme_override_font_sizes/font_size = 20
text = "Volume do efeito sonoro"

[node name="HSlider" type="HSlider" parent="."]
offset_left = 500.0
offset_top = 158.0
offset_right = 825.0
offset_bottom = 174.0

[node name="HSlider2" type="HSlider" parent="."]
offset_left = 500.0
offset_top = 198.0
offset_right = 825.0
offset_bottom = 214.0

[node name="musica" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7ofij")

[node name="efeitosonoro" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_aknb3")

[node name="musicaOnOff" type="CheckButton" parent="."]
offset_left = 402.0
offset_top = 212.0
offset_right = 578.0
offset_bottom = 262.0
focus_mode = 0
mouse_force_pass_scroll_events = false
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dbr2k")
theme_override_font_sizes/font_size = 20
text = "Musica    Off"
flat = true

[node name="off" type="Label" parent="."]
offset_left = 576.0
offset_top = 222.0
offset_right = 613.0
offset_bottom = 250.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dbr2k")
theme_override_font_sizes/font_size = 20
text = "On"

[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]
[connection signal="drag_ended" from="HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="HSlider2" to="." method="_on_h_slider_2_value_changed"]
[connection signal="toggled" from="musicaOnOff" to="." method="_on_check_button_toggled"]
